@@ -7,9 +7,13 @@
 	lists of grobs. This should fix the problems of lily in
 	combination with pthreads/qthreads.
 
-2002-06-23  Han-Wen  <hanwen@cs.uu.nl>
-
 	* lily/grob.cc (mark_smob): bugfix: mark X parent too.
+
+2002-06-23  Chris Jackson  <chris@fluffhouse.org.uk>
+
+	* lily/text-spanner.cc (setup_pedal_bracket):
+	* lily/piano-pedal-engraver.cc (create_bracket_grobs): 
+	Fix the lengths of mixed-style piano pedal brackets.
 
 2002-06-23  Jan Nieuwenhuizen  <janneke@gnu.org>
 
